--- a/modules/potree/package.json
+++ b/modules/potree/package.json
@@ -45,6 +45,8 @@
   },
   "dependencies": {
     "@loaders.gl/math": "4.3.0-alpha.4",
+    "@loaders.gl/las": "4.3.0-alpha.4",
+    "@loaders.gl/schema": "4.3.0-alpha.4",
     "@math.gl/core": "^4.0.0"
   },
   "peerDependencies": {
