fix(terrain): Add terrain-worker.js bundle to exports path

--- a/modules/terrain/package.json
+++ b/modules/terrain/package.json
@@ -28,6 +28,9 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
+    "./terrain-worker.js": {
+      "import": "./dist/terrain-worker.js"
+    }
   },
   "sideEffects": false,
   "files": [
