--- a/modules/terrain/package.json
+++ b/modules/terrain/package.json
@@ -27,6 +27,9 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./terrain-worker.js": {
+      "import": "./dist/terrain-worker.js"
     }
   },
   "sideEffects": false,
