--- a/examples/experimental/3d-tiles-with-cesium/package.json
+++ b/examples/experimental/3d-tiles-with-cesium/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@loaders.gl/3d-tiles": "^4.0.0",
     "@loaders.gl/core": "^4.0.0",
-    "@math.gl/culling": "^4.0.0",
-    "@math.gl/core": "^4.0.0"
+    "@math.gl/culling": "4.1.0-alpha.3",
+    "@math.gl/core": "4.1.0-alpha.3"
   },
   "devDependencies": {
     "babel-plugin-inline-import": "^3.0.0",
