--- a/modules/arrow/package.json
+++ b/modules/arrow/package.json
@@ -58,7 +58,7 @@
     "@loaders.gl/schema": "4.3.0-alpha.5",
     "@loaders.gl/wkt": "4.3.0-alpha.5",
     "@loaders.gl/worker-utils": "4.3.0-alpha.5",
-    "@math.gl/polygon": "4.0.0",
+    "@math.gl/polygon": "4.1.0-alpha.3",
     "apache-arrow": ">= 15.0.0"
   },
   "peerDependencies": {
