--- a/modules/copc/package.json
+++ b/modules/copc/package.json
@@ -47,5 +47,8 @@
     "@loaders.gl/schema": "4.3.0-alpha.5",
     "copc": "0.0.6"
   },
+  "peerDependencies": {
+    "@loaders.gl/core": "^4.0.0"
+  },
   "gitHead": "c95a4ff72512668a93d9041ce8636bac09333fd5"
 }
