--- a/modules/flatgeobuf/package.json
+++ b/modules/flatgeobuf/package.json
@@ -47,7 +47,7 @@
     "@loaders.gl/gis": "4.3.0-alpha.5",
     "@loaders.gl/loader-utils": "4.3.0-alpha.5",
     "@loaders.gl/schema": "4.3.0-alpha.5",
-    "@math.gl/proj4": "^4.0.0",
+    "@math.gl/proj4": "4.1.0-alpha.3",
     "flatgeobuf": "3.27.2"
   },
   "devDependencies": {
