--- a/modules/geopackage/package.json
+++ b/modules/geopackage/package.json
@@ -47,7 +47,7 @@
     "@loaders.gl/loader-utils": "4.3.0-alpha.5",
     "@loaders.gl/schema": "4.3.0-alpha.5",
     "@loaders.gl/wkt": "4.3.0-alpha.5",
-    "@math.gl/proj4": "^4.0.0",
+    "@math.gl/proj4": "4.1.0-alpha.3",
     "@types/sql.js": "^1.4.5",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
