--- a/modules/gis/package.json
+++ b/modules/gis/package.json
@@ -35,11 +35,11 @@
     "@loaders.gl/loader-utils": "4.3.0-alpha.5",
     "@loaders.gl/schema": "4.3.0-alpha.5",
     "@mapbox/vector-tile": "^1.3.1",
-    "@math.gl/polygon": "^4.0.0",
+    "@math.gl/polygon": "4.1.0-alpha.3",
     "pbf": "^3.2.1"
   },
   "devDependencies": {
-    "@math.gl/proj4": "^4.0.0"
+    "@math.gl/proj4": "4.1.0-alpha.3"
   },
   "peerDependencies": {
     "@loaders.gl/core": "^4.0.0"
