--- a/modules/i3s/package.json
+++ b/modules/i3s/package.json
@@ -52,9 +52,9 @@
     "@loaders.gl/textures": "4.3.0-alpha.5",
     "@loaders.gl/tiles": "4.3.0-alpha.5",
     "@loaders.gl/zip": "4.3.0-alpha.5",
-    "@math.gl/core": "^4.0.0",
-    "@math.gl/culling": "^4.0.0",
-    "@math.gl/geospatial": "^4.0.0"
+    "@math.gl/core": "4.1.0-alpha.3",
+    "@math.gl/culling": "4.1.0-alpha.3",
+    "@math.gl/geospatial": "4.1.0-alpha.3"
   },
   "peerDependencies": {
     "@loaders.gl/core": "^4.0.0"
