--- a/modules/math/package.json
+++ b/modules/math/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "@loaders.gl/images": "4.3.0-alpha.5",
     "@loaders.gl/loader-utils": "4.3.0-alpha.5",
-    "@math.gl/core": "^4.0.0"
+    "@math.gl/core": "4.1.0-alpha.3"
   },
   "peerDependencies": {
     "@loaders.gl/core": "^4.0.0"
