--- a/modules/mvt/package.json
+++ b/modules/mvt/package.json
@@ -48,7 +48,7 @@
     "@loaders.gl/images": "4.3.0-alpha.5",
     "@loaders.gl/loader-utils": "4.3.0-alpha.5",
     "@loaders.gl/schema": "4.3.0-alpha.5",
-    "@math.gl/polygon": "^4.0.0",
+    "@math.gl/polygon": "4.1.0-alpha.3",
     "@probe.gl/stats": "^4.0.0",
     "pbf": "^3.2.1"
   },
