--- a/modules/potree/package.json
+++ b/modules/potree/package.json
@@ -47,7 +47,7 @@
     "@loaders.gl/las": "4.3.0-alpha.5",
     "@loaders.gl/math": "4.3.0-alpha.5",
     "@loaders.gl/schema": "4.3.0-alpha.5",
-    "@math.gl/core": "^4.0.0"
+    "@math.gl/core": "4.1.0-alpha.3"
   },
   "peerDependencies": {
     "@loaders.gl/core": "^4.0.0"
