--- a/modules/shapefile/package.json
+++ b/modules/shapefile/package.json
@@ -48,7 +48,7 @@
     "@loaders.gl/gis": "4.3.0-alpha.5",
     "@loaders.gl/loader-utils": "4.3.0-alpha.5",
     "@loaders.gl/schema": "4.3.0-alpha.5",
-    "@math.gl/proj4": "^4.0.0"
+    "@math.gl/proj4": "4.1.0-alpha.3"
   },
   "peerDependencies": {
     "@loaders.gl/core": "^4.0.0"
