--- a/modules/textures/package.json
+++ b/modules/textures/package.json
@@ -58,7 +58,7 @@
     "@loaders.gl/loader-utils": "4.3.0-alpha.5",
     "@loaders.gl/schema": "4.3.0-alpha.5",
     "@loaders.gl/worker-utils": "4.3.0-alpha.5",
-    "@math.gl/types": "^4.0.1",
+    "@math.gl/types": "4.1.0-alpha.3",
     "ktx-parse": "^0.7.0",
     "texture-compressor": "^1.0.2"
   },
