--- a/modules/tile-converter/package.json
+++ b/modules/tile-converter/package.json
@@ -65,10 +65,10 @@
     "@loaders.gl/tiles": "4.3.0-alpha.5",
     "@loaders.gl/worker-utils": "4.3.0-alpha.5",
     "@loaders.gl/zip": "4.3.0-alpha.5",
-    "@math.gl/core": "^4.0.0",
-    "@math.gl/culling": "^4.0.0",
-    "@math.gl/geoid": "^4.0.0",
-    "@math.gl/geospatial": "^4.0.0",
+    "@math.gl/core": "4.1.0-alpha.3",
+    "@math.gl/culling": "4.1.0-alpha.3",
+    "@math.gl/geoid": "4.1.0-alpha.3",
+    "@math.gl/geospatial": "4.1.0-alpha.3",
     "ajv": "^8.12.0",
     "archiver": "^5.0.0",
     "cors": "^2.8.5",
