--- a/modules/tiles/package.json
+++ b/modules/tiles/package.json
@@ -44,10 +44,10 @@
   "dependencies": {
     "@loaders.gl/loader-utils": "4.3.0-alpha.5",
     "@loaders.gl/math": "4.3.0-alpha.5",
-    "@math.gl/core": "^4.0.0",
-    "@math.gl/culling": "^4.0.0",
-    "@math.gl/geospatial": "^4.0.0",
-    "@math.gl/web-mercator": "^4.0.0",
+    "@math.gl/core": "4.1.0-alpha.3",
+    "@math.gl/culling": "4.1.0-alpha.3",
+    "@math.gl/geospatial": "4.1.0-alpha.3",
+    "@math.gl/web-mercator": "4.1.0-alpha.3",
     "@probe.gl/stats": "^4.0.2"
   },
   "devDependencies": {
