--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   },
   "compilerOptions": {
     "target": "es2022",
-    "module": "es2022",
+    "module": "esnext",
     "strict": true,
     "noImplicitAny": false,
     "allowJs": true,
