--- a/package.json
+++ b/package.json
@@ -58,10 +58,16 @@
   ],
   "resolutions": {
     "apache-arrow": "^15.0.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.5.0"
   },
   "volta": {
     "node": "22.6.0",
     "yarn": "4.4.0"
+  },
+  "engines_comment": {
+    "node": "Requires support for import ... with ... syntax"
+  },
+  "engines": {
+    "node": ">=18.20"
   }
 }
