--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "@probe.gl/bench": "^4.0.2",
     "@probe.gl/test-utils": "^4.0.2",
     "@types/tape-promise": "^4.0.1",
-    "ocular-dev-tools": "2.0.0-alpha.31",
+    "ocular-dev-tools": "2.0.0-alpha.35",
     "pre-commit": "^1.2.2",
-    "pre-push": "^0.1.1"
+    "pre-push": "^0.1.1",
+    "tap-spec": "^5.0.0"
   },
   "pre-commit": "pre-commit",
   "pre-push": "pre-push",
