chore(examples): bump @deck.gl version

--- a/examples/website/i3s-building-scene-layer/package.json
+++ b/examples/website/i3s-building-scene-layer/package.json
@@ -11,7 +11,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@deck.gl-community/layers": "^9.0.0-alpha.1",
+    "@deck.gl-community/experimental": "^9.0.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
