--- a/examples/website/i3s-colorization-by-attributes/package.json
+++ b/examples/website/i3s-colorization-by-attributes/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@deck.gl/core": "^9.0.1",
-    "@deck.gl-community/layers": "^9.0.0-alpha.1",
+    "@deck.gl-community/experimental": "^9.0.3",
     "@loaders.gl/core": "^4.1.0",
     "@loaders.gl/i3s": "^4.1.0",
     "@luma.gl/core": "^9.0.1",
