--- a/examples/website/i3s-picking/package.json
+++ b/examples/website/i3s-picking/package.json
@@ -11,13 +11,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "deck.gl": "^8.9.28",
+    "@deck.gl/core": "^9.0.4",
+    "@deck.gl/geo-layers": "^9.0.4",
+    "@deck.gl/react": "^9.0.4",
+    "@deck.gl/mesh-layers": "^9.0.4",
+    "@deck.gl/layers": "^9.0.4",
+    "@deck.gl/extensions": "^9.0.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@loaders.gl/core": "^4.0.0",
     "@loaders.gl/i3s": "^4.0.0",
-    "@luma.gl/core": "^9.0.7",
+    "@luma.gl/core": "^9.0.8",
     "mapbox-gl": "npm:empty-npm-package@^1.0.0",
     "maplibre-gl": "^3.6.2",
     "prop-types": "^15.7.2",
