--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,18 +12,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20]
 
     steps:
       - uses: actions/checkout@v4.1.1
       - uses: volta-cli/action@v4
-
-      - name: Set up Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v4.0.0
-        with:
-          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: |
@@ -47,11 +39,9 @@ jobs:
 
       - name: Build website
         run: |
-          cd website |
-          yarn install |
-          yarn run build
+          cd website ; yarn install ; yarn run build
   
-        - name: Coveralls
+      - name: Coveralls
         if: matrix.node-version == 18
         uses: coverallsapp/github-action@master
         with:
