--- a/website/package.json
+++ b/website/package.json
@@ -31,14 +31,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@loaders.gl/core": "^4.0.0",
-    "@loaders.gl/geopackage": "^4.0.0",
-    "@loaders.gl/i3s": "^4.0.0",
-    "@loaders.gl/las": "^4.0.0",
-    "@loaders.gl/loader-utils": "^4.0.0",
-    "@loaders.gl/obj": "^4.0.0",
-    "@loaders.gl/ply": "^4.0.0",
-    "@loaders.gl/schema": "^4.0.0",
+    "@loaders.gl/core": "^^5.0.0-alpha.0",
+    "@loaders.gl/geopackage": "^^5.0.0-alpha.0",
+    "@loaders.gl/i3s": "^^5.0.0-alpha.0",
+    "@loaders.gl/las": "^^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "^^5.0.0-alpha.0",
+    "@loaders.gl/obj": "^^5.0.0-alpha.0",
+    "@loaders.gl/ply": "^^5.0.0-alpha.0",
+    "@loaders.gl/schema": "^^5.0.0-alpha.0",
     "@luma.gl/gltf": "^9.0.8",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
@@ -68,12 +68,12 @@
     "zstd-codec": "^0.1.4"
   },
   "devDependencies": {
-    "@cmfcmf/docusaurus-search-local": "^1.1.0",
-    "@docusaurus/module-type-aliases": "^3.3.2",
-    "@docusaurus/plugin-client-redirects": "^3.3.2",
-    "@docusaurus/plugin-content-docs": "^3.3.2",
-    "@docusaurus/tsconfig": "^3.3.2",
-    "babel-plugin-styled-components": "^2.0.0",
+    "@cmfcmf/docusaurus-search-local": "~1.1.0",
+    "@docusaurus/module-type-aliases": "~3.3.2",
+    "@docusaurus/plugin-client-redirects": "~3.3.2",
+    "@docusaurus/plugin-content-docs": "~3.3.2",
+    "@docusaurus/tsconfig": "~3.3.2",
+    "babel-plugin-styled-components": "~2.0.0",
     "ts-node": "~10.9.1"
   },
   "resolutions": {
