--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "lerna": "2.0.0",
-  "version": "4.3.0-beta.0",
+  "version": "5.0.0-alpha.0",
   "npmClient": "yarn",
   "exact": true,
   "packages": [
