--- a/modules/arrow/package.json
+++ b/modules/arrow/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/arrow",
-  "version": "4.3.0-alpha.8",
+  "version": "5.0.0-alpha.0",
   "description": "Simple columnar table loader for the Apache Arrow format",
   "license": "MIT",
   "type": "module",
@@ -57,11 +57,11 @@
     "build-worker2": "esbuild src/workers/arrow-worker.ts --bundle --outfile=dist/arrow-worker.js --platform=browser --external:{stream}"
   },
   "dependencies": {
-    "@loaders.gl/gis": "4.3.0-alpha.8",
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
-    "@loaders.gl/schema": "4.3.0-alpha.8",
-    "@loaders.gl/wkt": "4.3.0-alpha.8",
-    "@loaders.gl/worker-utils": "4.3.0-alpha.8",
+    "@loaders.gl/gis": "^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/schema": "^5.0.0-alpha.0",
+    "@loaders.gl/wkt": "^5.0.0-alpha.0",
+    "@loaders.gl/worker-utils": "^5.0.0-alpha.0",
     "@math.gl/polygon": "^4.1.0",
     "apache-arrow": ">= 15.0.0"
   },
