--- a/modules/bson/package.json
+++ b/modules/bson/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/bson",
-  "version": "4.3.0-alpha.8",
+  "version": "5.0.0-alpha.0",
   "description": "Framework-independent loader for JSON and streaming JSON formats",
   "license": "MIT",
   "type": "module",
@@ -40,9 +40,9 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/gis": "4.3.0-alpha.8",
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
-    "@loaders.gl/schema": "4.3.0-alpha.8",
+    "@loaders.gl/gis": "^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/schema": "^5.0.0-alpha.0",
     "@types/bson": "4.2.0",
     "bson": "4.2.0"
   },
