--- a/modules/copc/package.json
+++ b/modules/copc/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@loaders.gl/copc",
-  "version": "4.3.0-alpha.8",
+  "version": "5.0.0-alpha.0",
   "description": "Framework-independent loader for the COPC format",
   "license": "MIT",
   "type": "module",
@@ -41,10 +41,10 @@
     "build-bundle": "# ocular-bundle ./src/index.ts"
   },
   "dependencies": {
-    "@loaders.gl/images": "4.3.0-alpha.8",
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
-    "@loaders.gl/mvt": "4.3.0-alpha.8",
-    "@loaders.gl/schema": "4.3.0-alpha.8",
+    "@loaders.gl/images": "^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/mvt": "^5.0.0-alpha.0",
+    "@loaders.gl/schema": "^5.0.0-alpha.0",
     "copc": "0.0.6"
   },
   "gitHead": "c95a4ff72512668a93d9041ce8636bac09333fd5"
