--- a/modules/kml/package.json
+++ b/modules/kml/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/kml",
-  "version": "4.3.0-alpha.8",
+  "version": "5.0.0-alpha.0",
   "description": "Framework-independent loader for the KML format",
   "license": "MIT",
   "type": "module",
@@ -41,9 +41,9 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/gis": "4.3.0-alpha.8",
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
-    "@loaders.gl/schema": "4.3.0-alpha.8",
+    "@loaders.gl/gis": "^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/schema": "^5.0.0-alpha.0",
     "@tmcw/togeojson": "^4.5.0",
     "@xmldom/xmldom": "^0.7.13"
   },
