--- a/modules/netcdf/package.json
+++ b/modules/netcdf/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@loaders.gl/netcdf",
   "description": "Loader for NetCDF",
-  "version": "4.3.0-alpha.8",
+  "version": "5.0.0-alpha.0",
   "license": "MIT",
   "type": "module",
   "publishConfig": {
@@ -39,7 +39,7 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8"
+    "@loaders.gl/loader-utils": "^5.0.0-alpha.0"
   },
   "peerDependencies": {
     "@loaders.gl/core": "^4.0.0"
