--- a/modules/parquet/package.json
+++ b/modules/parquet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/parquet",
-  "version": "4.3.0-alpha.8",
+  "version": "5.0.0-alpha.0",
   "description": "Framework-independent loader for Apache Parquet files",
   "license": "MIT",
   "type": "module",
@@ -60,13 +60,13 @@
     "base64-js and ieee754 are used by buffer polyfill"
   ],
   "dependencies": {
-    "@loaders.gl/arrow": "4.3.0-alpha.8",
-    "@loaders.gl/bson": "4.3.0-alpha.8",
-    "@loaders.gl/compression": "4.3.0-alpha.8",
-    "@loaders.gl/gis": "4.3.0-alpha.8",
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
-    "@loaders.gl/schema": "4.3.0-alpha.8",
-    "@loaders.gl/wkt": "4.3.0-alpha.8",
+    "@loaders.gl/arrow": "^5.0.0-alpha.0",
+    "@loaders.gl/bson": "^5.0.0-alpha.0",
+    "@loaders.gl/compression": "^5.0.0-alpha.0",
+    "@loaders.gl/gis": "^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/schema": "^5.0.0-alpha.0",
+    "@loaders.gl/wkt": "^5.0.0-alpha.0",
     "@probe.gl/log": "^4.0.9",
     "async-mutex": "^0.2.2",
     "base64-js": "^1.3.1",
