--- a/modules/pcd/package.json
+++ b/modules/pcd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/pcd",
-  "version": "4.3.0-alpha.8",
+  "version": "5.0.0-alpha.0",
   "description": "Framework-independent loader for the PCD format",
   "license": "MIT",
   "type": "module",
@@ -42,8 +42,8 @@
     "build-worker": "esbuild src/workers/pcd-worker.ts --bundle --outfile=dist/pcd-worker.js --define:__VERSION__=\\\"$npm_package_version\\\""
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
-    "@loaders.gl/schema": "4.3.0-alpha.8"
+    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/schema": "^5.0.0-alpha.0"
   },
   "peerDependencies": {
     "@loaders.gl/core": "^4.0.0"
