--- a/modules/wkt/package.json
+++ b/modules/wkt/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@loaders.gl/wkt",
   "description": "Loader and Writer for the WKT (Well Known Text) Format",
-  "version": "4.3.0-alpha.8",
+  "version": "5.0.0-alpha.0",
   "license": "MIT",
   "type": "module",
   "publishConfig": {
@@ -44,9 +44,9 @@
     "fuzzer": "^0.2.1"
   },
   "dependencies": {
-    "@loaders.gl/gis": "4.3.0-alpha.8",
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
-    "@loaders.gl/schema": "4.3.0-alpha.8"
+    "@loaders.gl/gis": "^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/schema": "^5.0.0-alpha.0"
   },
   "peerDependencies": {
     "@loaders.gl/core": "^4.0.0"
