--- a/modules/wms/package.json
+++ b/modules/wms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/wms",
-  "version": "4.3.0-alpha.8",
+  "version": "5.0.0-alpha.0",
   "description": "Framework-independent loaders for the WMS (Web Map Service) standard",
   "license": "MIT",
   "type": "module",
@@ -50,10 +50,10 @@
     "path": false
   },
   "dependencies": {
-    "@loaders.gl/images": "4.3.0-alpha.8",
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
-    "@loaders.gl/schema": "4.3.0-alpha.8",
-    "@loaders.gl/xml": "4.3.0-alpha.8",
+    "@loaders.gl/images": "^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/schema": "^5.0.0-alpha.0",
+    "@loaders.gl/xml": "^5.0.0-alpha.0",
     "@turf/rewind": "^5.1.5",
     "deep-strict-equal": "^0.2.0"
   },
