feat(core): Improve typing and naming for DataSources (#3104)

--- a/website/package.json
+++ b/website/package.json
@@ -68,12 +68,12 @@
     "zstd-codec": "^0.1.4"
   },
   "devDependencies": {
-    "@cmfcmf/docusaurus-search-local": "^1.1.0",
-    "@docusaurus/module-type-aliases": "^3.3.2",
-    "@docusaurus/plugin-client-redirects": "^3.3.2",
-    "@docusaurus/plugin-content-docs": "^3.3.2",
-    "@docusaurus/tsconfig": "^3.3.2",
-    "babel-plugin-styled-components": "^2.0.0",
+    "@cmfcmf/docusaurus-search-local": "~1.1.0",
+    "@docusaurus/module-type-aliases": "~3.3.2",
+    "@docusaurus/plugin-client-redirects": "~3.3.2",
+    "@docusaurus/plugin-content-docs": "~3.3.2",
+    "@docusaurus/tsconfig": "~3.3.2",
+    "babel-plugin-styled-components": "~2.0.0",
     "ts-node": "~10.9.1"
   },
   "resolutions": {
