--- a/modules/schema-utils/tsconfig.json
+++ b/modules/schema-utils/tsconfig.json
@@ -8,9 +8,6 @@
     "outDir": "dist"
   },
   "references": [
-    {"path": "../loader-utils"},
-    {"path": "../schema"},
-    {"path": "../schema-utils"},
-    {"path": "../worker-utils"}
+    "../schema"
   ]
 }
