--- a/modules/terrain/tsconfig.json
+++ b/modules/terrain/tsconfig.json
@@ -10,6 +10,7 @@
   "references": [
     {"path": "../images"},
     {"path": "../loader-utils"},
-    {"path": "../schema"}
+    {"path": "../schema"},
+    {"path": "../schema-utils"}
   ]
 }
