--- a/modules/schema-utils/tsconfig.json
+++ b/modules/schema-utils/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "dist"
   },
   "references": [
-    {"path": "../schema"}
+    {"path": "../schema"},
+    {"path": "../schema-utils"}
   ]
 }
