--- a/modules/schema-utils/tsconfig.json
+++ b/modules/schema-utils/tsconfig.json
@@ -8,7 +8,6 @@
     "outDir": "dist"
   },
   "references": [
-    {"path": "../schema"},
-    {"path": "../schema-utils"}
+    {"path": "../schema"}
   ]
 }
