--- a/modules/arrow/tsconfig.json
+++ b/modules/arrow/tsconfig.json
@@ -12,6 +12,7 @@
     {"path": "../gis"},
     {"path": "../loader-utils"},
     {"path": "../schema"},
+    {"path": "../schema-utils"},
     {"path": "../wkt"}
   ]
 }
