--- a/modules/kml/tsconfig.json
+++ b/modules/kml/tsconfig.json
@@ -10,6 +10,7 @@
   "references": [
     {"path": "../gis"},
     {"path": "../loader-utils"},
-    {"path": "../schema"}
+    {"path": "../schema"},
+    {"path": "../schema-utils"}
   ]
 }
