--- a/modules/math/package.json
+++ b/modules/math/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/math",
-  "version": "4.3.0-alpha.8",
+  "version": "4.3.0-beta.1",
   "description": "Experimental math classes for loaders.gl",
   "license": "MIT",
   "type": "module",
@@ -39,8 +39,8 @@
     "pre-build": "echo \"Nothing to build in @loaders.gl/math\""
   },
   "dependencies": {
-    "@loaders.gl/images": "4.3.0-alpha.8",
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
+    "@loaders.gl/images": "4.3.0-beta.1",
+    "@loaders.gl/loader-utils": "4.3.0-beta.1",
     "@math.gl/core": "^4.1.0"
   },
   "peerDependencies": {
