--- a/modules/potree/package.json
+++ b/modules/potree/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/potree",
-  "version": "4.3.0-alpha.8",
+  "version": "4.3.0-beta.1",
   "description": "potree loaders for large point clouds.",
   "license": "MIT",
   "type": "module",
@@ -44,9 +44,9 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/las": "4.3.0-alpha.8",
-    "@loaders.gl/math": "4.3.0-alpha.8",
-    "@loaders.gl/schema": "4.3.0-alpha.8",
+    "@loaders.gl/las": "4.3.0-beta.1",
+    "@loaders.gl/math": "4.3.0-beta.1",
+    "@loaders.gl/schema": "4.3.0-beta.1",
     "@math.gl/core": "^4.1.0"
   },
   "peerDependencies": {
