--- a/modules/tile-converter/package.json
+++ b/modules/tile-converter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/tile-converter",
-  "version": "4.3.0-alpha.8",
+  "version": "4.3.0-beta.1",
   "description": "Converter",
   "license": "MIT",
   "type": "module",
@@ -51,20 +51,20 @@
     "copy-certificates": "cp -R src/i3s-server/certs dist/i3s-server"
   },
   "dependencies": {
-    "@loaders.gl/3d-tiles": "4.3.0-alpha.8",
-    "@loaders.gl/compression": "4.3.0-alpha.8",
-    "@loaders.gl/crypto": "4.3.0-alpha.8",
-    "@loaders.gl/draco": "4.3.0-alpha.8",
-    "@loaders.gl/gltf": "4.3.0-alpha.8",
-    "@loaders.gl/i3s": "4.3.0-alpha.8",
-    "@loaders.gl/images": "4.3.0-alpha.8",
-    "@loaders.gl/loader-utils": "4.3.0-alpha.8",
-    "@loaders.gl/math": "4.3.0-alpha.8",
-    "@loaders.gl/polyfills": "4.3.0-alpha.8",
-    "@loaders.gl/textures": "4.3.0-alpha.8",
-    "@loaders.gl/tiles": "4.3.0-alpha.8",
-    "@loaders.gl/worker-utils": "4.3.0-alpha.8",
-    "@loaders.gl/zip": "4.3.0-alpha.8",
+    "@loaders.gl/3d-tiles": "4.3.0-beta.1",
+    "@loaders.gl/compression": "4.3.0-beta.1",
+    "@loaders.gl/crypto": "4.3.0-beta.1",
+    "@loaders.gl/draco": "4.3.0-beta.1",
+    "@loaders.gl/gltf": "4.3.0-beta.1",
+    "@loaders.gl/i3s": "4.3.0-beta.1",
+    "@loaders.gl/images": "4.3.0-beta.1",
+    "@loaders.gl/loader-utils": "4.3.0-beta.1",
+    "@loaders.gl/math": "4.3.0-beta.1",
+    "@loaders.gl/polyfills": "4.3.0-beta.1",
+    "@loaders.gl/textures": "4.3.0-beta.1",
+    "@loaders.gl/tiles": "4.3.0-beta.1",
+    "@loaders.gl/worker-utils": "4.3.0-beta.1",
+    "@loaders.gl/zip": "4.3.0-beta.1",
     "@math.gl/core": "^4.1.0",
     "@math.gl/culling": "^4.1.0",
     "@math.gl/geoid": "^4.1.0",
