--- a/modules/3d-tiles/package.json
+++ b/modules/3d-tiles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/3d-tiles",
-  "version": "4.3.0-beta.3",
+  "version": "4.3.0",
   "description": "3D Tiles, an open standard for streaming massive heterogeneous 3D geospatial datasets.",
   "license": "MIT",
   "type": "module",
@@ -46,15 +46,15 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/compression": "4.3.0-beta.3",
-    "@loaders.gl/crypto": "4.3.0-beta.3",
-    "@loaders.gl/draco": "4.3.0-beta.3",
-    "@loaders.gl/gltf": "4.3.0-beta.3",
-    "@loaders.gl/images": "4.3.0-beta.3",
-    "@loaders.gl/loader-utils": "4.3.0-beta.3",
-    "@loaders.gl/math": "4.3.0-beta.3",
-    "@loaders.gl/tiles": "4.3.0-beta.3",
-    "@loaders.gl/zip": "4.3.0-beta.3",
+    "@loaders.gl/compression": "4.3.0",
+    "@loaders.gl/crypto": "4.3.0",
+    "@loaders.gl/draco": "4.3.0",
+    "@loaders.gl/gltf": "4.3.0",
+    "@loaders.gl/images": "4.3.0",
+    "@loaders.gl/loader-utils": "4.3.0",
+    "@loaders.gl/math": "4.3.0",
+    "@loaders.gl/tiles": "4.3.0",
+    "@loaders.gl/zip": "4.3.0",
     "@math.gl/core": "^4.1.0",
     "@math.gl/culling": "^4.1.0",
     "@math.gl/geospatial": "^4.1.0",
