--- a/modules/terrain/package.json
+++ b/modules/terrain/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/terrain",
-  "version": "4.3.0-beta.3",
+  "version": "4.3.0",
   "description": "Framework-independent loader for terrain raster formats",
   "license": "MIT",
   "type": "module",
@@ -46,9 +46,9 @@
     "build-worker2": "esbuild src/workers/quantized-mesh-worker.ts --bundle --outfile=dist/quantized-mesh-worker.js --define:__VERSION__=\\\"$npm_package_version\\\""
   },
   "dependencies": {
-    "@loaders.gl/images": "4.3.0-beta.3",
-    "@loaders.gl/loader-utils": "4.3.0-beta.3",
-    "@loaders.gl/schema": "4.3.0-beta.3",
+    "@loaders.gl/images": "4.3.0",
+    "@loaders.gl/loader-utils": "4.3.0",
+    "@loaders.gl/schema": "4.3.0",
     "@mapbox/martini": "^0.2.0"
   },
   "peerDependencies": {
