--- a/modules/i3s/package.json
+++ b/modules/i3s/package.json
@@ -42,22 +42,22 @@
     "build-worker-node": "esbuild src/workers/i3s-content-worker-node.ts --outfile=dist/i3s-content-worker-node.js --platform=node --target=node16 --minify --bundle --sourcemap --define:__VERSION__=\\\"$npm_package_version\\\""
   },
   "dependencies": {
-    "@loaders.gl/compression": "4.3.0",
-    "@loaders.gl/crypto": "4.3.0",
-    "@loaders.gl/draco": "4.3.0",
-    "@loaders.gl/images": "4.3.0",
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/math": "4.3.0",
-    "@loaders.gl/schema": "4.3.0",
-    "@loaders.gl/textures": "4.3.0",
-    "@loaders.gl/tiles": "4.3.0",
-    "@loaders.gl/zip": "4.3.0",
+    "@loaders.gl/compression": "^4.3.0",
+    "@loaders.gl/crypto": "^4.3.0",
+    "@loaders.gl/draco": "^4.3.0",
+    "@loaders.gl/images": "^4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/math": "^4.3.0",
+    "@loaders.gl/schema": "^4.3.0",
+    "@loaders.gl/textures": "^4.3.0",
+    "@loaders.gl/tiles": "^4.3.0",
+    "@loaders.gl/zip": "^4.3.0",
     "@math.gl/core": "^4.1.0",
     "@math.gl/culling": "^4.1.0",
     "@math.gl/geospatial": "^4.1.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
