--- a/modules/3d-tiles/package.json
+++ b/modules/3d-tiles/package.json
@@ -46,15 +46,15 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/compression": "4.3.0",
-    "@loaders.gl/crypto": "4.3.0",
-    "@loaders.gl/draco": "4.3.0",
-    "@loaders.gl/gltf": "4.3.0",
-    "@loaders.gl/images": "4.3.0",
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/math": "4.3.0",
-    "@loaders.gl/tiles": "4.3.0",
-    "@loaders.gl/zip": "4.3.0",
+    "@loaders.gl/compression": "^4.3.0",
+    "@loaders.gl/crypto": "^4.3.0",
+    "@loaders.gl/draco": "^4.3.0",
+    "@loaders.gl/gltf": "^4.3.0",
+    "@loaders.gl/images": "^4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/math": "^4.3.0",
+    "@loaders.gl/tiles": "^4.3.0",
+    "@loaders.gl/zip": "^4.3.0",
     "@math.gl/core": "^4.1.0",
     "@math.gl/culling": "^4.1.0",
     "@math.gl/geospatial": "^4.1.0",
@@ -62,7 +62,7 @@
     "long": "^5.2.1"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
