--- a/modules/compression/package.json
+++ b/modules/compression/package.json
@@ -50,8 +50,8 @@
     "build-worker-node": "esbuild src/workers/compression-worker-node.ts --outfile=dist/compression-worker-node.js --platform=node --target=node16 --bundle --minify --sourcemap --define:__VERSION__=\\\"$npm_package_version\\\""
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/worker-utils": "4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/worker-utils": "^4.3.0",
     "@types/brotli": "^1.3.0",
     "@types/pako": "^1.0.1",
     "fflate": "0.7.4",
@@ -70,7 +70,7 @@
     "zstd-codec": "^0.1"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
