--- a/modules/copc/package.json
+++ b/modules/copc/package.json
@@ -41,10 +41,10 @@
     "build-bundle": "# ocular-bundle ./src/index.ts"
   },
   "dependencies": {
-    "@loaders.gl/images": "4.3.0",
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/mvt": "4.3.0",
-    "@loaders.gl/schema": "4.3.0",
+    "@loaders.gl/images": "^4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/mvt": "^4.3.0",
+    "@loaders.gl/schema": "^4.3.0",
     "copc": "0.0.6"
   },
   "gitHead": "c95a4ff72512668a93d9041ce8636bac09333fd5"
