--- a/modules/core/package.json
+++ b/modules/core/package.json
@@ -55,9 +55,9 @@
     "build-worker-node": "esbuild src/workers/null-worker.ts --outfile=dist/null-worker-node.js --bundle --platform=node --target=node16 --define:__VERSION__=\\\"$npm_package_version\\\""
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/schema": "4.3.0",
-    "@loaders.gl/worker-utils": "4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/schema": "^4.3.0",
+    "@loaders.gl/worker-utils": "^4.3.0",
     "@probe.gl/log": "^4.0.2"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
