--- a/modules/crypto/package.json
+++ b/modules/crypto/package.json
@@ -46,8 +46,8 @@
     "build-worker-node": "esbuild src/workers/crypto-worker-node.ts --outfile=dist/crypto-worker-node.js --platform=node --target=esnext,node16 --bundle --minify --sourcemap --define:__VERSION__=\\\"$npm_package_version\\\""
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/worker-utils": "4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/worker-utils": "^4.3.0",
     "@types/crypto-js": "^4.0.2"
   },
   "devDependencies": {
@@ -58,7 +58,7 @@
     "sse4_crc32": false
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
