--- a/modules/draco/package.json
+++ b/modules/draco/package.json
@@ -57,16 +57,16 @@
     "build-writer-worker-node": "esbuild src/workers/draco-writer-worker-node.ts --outfile=dist/draco-writer-worker-node.js --target=node16 --platform=node --bundle --sourcemap --define:__VERSION__=\\\"$npm_package_version\\\""
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/schema": "4.3.0",
-    "@loaders.gl/worker-utils": "4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/schema": "^4.3.0",
+    "@loaders.gl/worker-utils": "^4.3.0",
     "draco3d": "1.5.7"
   },
   "devDependencies": {
     "@types/draco3d": "^1.4.9"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
