--- a/modules/geotiff/package.json
+++ b/modules/geotiff/package.json
@@ -46,12 +46,12 @@
     "geotiff": "ilan-gold/geotiff.js#ilan-gold/viv_094"
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
     "fast-xml-parser": "^4.2.5",
     "geotiff": "^2.1.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
