--- a/modules/kml/package.json
+++ b/modules/kml/package.json
@@ -41,14 +41,14 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/gis": "4.3.0",
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/schema": "4.3.0",
+    "@loaders.gl/gis": "^4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/schema": "^4.3.0",
     "@tmcw/togeojson": "^4.5.0",
     "@xmldom/xmldom": "^0.7.13"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
