--- a/modules/parquet/package.json
+++ b/modules/parquet/package.json
@@ -60,13 +60,13 @@
     "base64-js and ieee754 are used by buffer polyfill"
   ],
   "dependencies": {
-    "@loaders.gl/arrow": "4.3.0",
-    "@loaders.gl/bson": "4.3.0",
-    "@loaders.gl/compression": "4.3.0",
-    "@loaders.gl/gis": "4.3.0",
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/schema": "4.3.0",
-    "@loaders.gl/wkt": "4.3.0",
+    "@loaders.gl/arrow": "^4.3.0",
+    "@loaders.gl/bson": "^4.3.0",
+    "@loaders.gl/compression": "^4.3.0",
+    "@loaders.gl/gis": "^4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/schema": "^4.3.0",
+    "@loaders.gl/wkt": "^4.3.0",
     "@probe.gl/log": "^4.0.9",
     "async-mutex": "^0.2.2",
     "base64-js": "^1.3.1",
@@ -91,7 +91,7 @@
     "apache-arrow": "^15.0.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0",
+    "@loaders.gl/core": "^4.3.0",
     "apache-arrow": ">= 15.0.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
