--- a/modules/polyfills/package.json
+++ b/modules/polyfills/package.json
@@ -45,8 +45,8 @@
     "build-bundle-dev": "# ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/crypto": "4.3.0",
-    "@loaders.gl/loader-utils": "4.3.0",
+    "@loaders.gl/crypto": "^4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
     "buffer": "^6.0.3",
     "get-pixels": "^3.3.3",
     "ndarray": "^1.0.19",
@@ -56,7 +56,7 @@
     "web-streams-polyfill": "^4.0.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
