--- a/modules/tile-converter/package.json
+++ b/modules/tile-converter/package.json
@@ -51,20 +51,20 @@
     "copy-certificates": "cp -R src/i3s-server/certs dist/i3s-server"
   },
   "dependencies": {
-    "@loaders.gl/3d-tiles": "4.3.0",
-    "@loaders.gl/compression": "4.3.0",
-    "@loaders.gl/crypto": "4.3.0",
-    "@loaders.gl/draco": "4.3.0",
-    "@loaders.gl/gltf": "4.3.0",
-    "@loaders.gl/i3s": "4.3.0",
-    "@loaders.gl/images": "4.3.0",
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/math": "4.3.0",
-    "@loaders.gl/polyfills": "4.3.0",
-    "@loaders.gl/textures": "4.3.0",
-    "@loaders.gl/tiles": "4.3.0",
-    "@loaders.gl/worker-utils": "4.3.0",
-    "@loaders.gl/zip": "4.3.0",
+    "@loaders.gl/3d-tiles": "^4.3.0",
+    "@loaders.gl/compression": "^4.3.0",
+    "@loaders.gl/crypto": "^4.3.0",
+    "@loaders.gl/draco": "^4.3.0",
+    "@loaders.gl/gltf": "^4.3.0",
+    "@loaders.gl/i3s": "^4.3.0",
+    "@loaders.gl/images": "^4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/math": "^4.3.0",
+    "@loaders.gl/polyfills": "^4.3.0",
+    "@loaders.gl/textures": "^4.3.0",
+    "@loaders.gl/tiles": "^4.3.0",
+    "@loaders.gl/worker-utils": "^4.3.0",
+    "@loaders.gl/zip": "^4.3.0",
     "@math.gl/core": "^4.1.0",
     "@math.gl/culling": "^4.1.0",
     "@math.gl/geoid": "^4.1.0",
@@ -91,7 +91,7 @@
     "@types/inquirer": "^9.0.7"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
