--- a/modules/wms/package.json
+++ b/modules/wms/package.json
@@ -50,15 +50,15 @@
     "path": false
   },
   "dependencies": {
-    "@loaders.gl/images": "4.3.0",
-    "@loaders.gl/loader-utils": "4.3.0",
-    "@loaders.gl/schema": "4.3.0",
-    "@loaders.gl/xml": "4.3.0",
+    "@loaders.gl/images": "^4.3.0",
+    "@loaders.gl/loader-utils": "^4.3.0",
+    "@loaders.gl/schema": "^4.3.0",
+    "@loaders.gl/xml": "^4.3.0",
     "@turf/rewind": "^5.1.5",
     "deep-strict-equal": "^0.2.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "^4.3.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
