--- a/examples/get-started/bundle-with-vite/package.json
+++ b/examples/get-started/bundle-with-vite/package.json
@@ -9,8 +9,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@loaders.gl/core": "^4.0.0",
-    "@loaders.gl/gltf": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0",
+    "@loaders.gl/gltf": "4.4.0-alpha.0"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
