--- a/examples/website/gltf/package.json
+++ b/examples/website/gltf/package.json
@@ -14,8 +14,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@loaders.gl/core": "^4.0.0",
-    "@loaders.gl/gltf": "^4.0.0",
+    "@loaders.gl/core": "4.4.0-alpha.0",
+    "@loaders.gl/gltf": "4.4.0-alpha.0",
     "@luma.gl/constants": "^9.0.7",
     "@luma.gl/core": "^9.0.7",
     "@luma.gl/gltf": "^9.0.7",
