--- a/examples/website/i3s-picking/package.json
+++ b/examples/website/i3s-picking/package.json
@@ -20,8 +20,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@loaders.gl/core": "^4.0.0",
-    "@loaders.gl/i3s": "^4.0.0",
+    "@loaders.gl/core": "4.4.0-alpha.0",
+    "@loaders.gl/i3s": "4.4.0-alpha.0",
     "@luma.gl/core": "^9.0.8",
     "mapbox-gl": "npm:empty-npm-package@^1.0.0",
     "maplibre-gl": "^3.6.2",
