--- a/modules/arrow/package.json
+++ b/modules/arrow/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/arrow",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "description": "Simple columnar table loader for the Apache Arrow format",
   "license": "MIT",
   "type": "module",
@@ -57,16 +57,16 @@
     "build-worker2": "esbuild src/workers/arrow-worker.ts --bundle --outfile=dist/arrow-worker.js --platform=browser --external:{stream}"
   },
   "dependencies": {
-    "@loaders.gl/gis": "^5.0.0-alpha.0",
-    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
-    "@loaders.gl/schema": "^5.0.0-alpha.0",
-    "@loaders.gl/wkt": "^5.0.0-alpha.0",
-    "@loaders.gl/worker-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/gis": "4.4.0-alpha.0",
+    "@loaders.gl/loader-utils": "4.4.0-alpha.0",
+    "@loaders.gl/schema": "4.4.0-alpha.0",
+    "@loaders.gl/wkt": "4.4.0-alpha.0",
+    "@loaders.gl/worker-utils": "4.4.0-alpha.0",
     "@math.gl/polygon": "^4.1.0",
     "apache-arrow": ">= 16.1.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
