--- a/modules/gis/package.json
+++ b/modules/gis/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@loaders.gl/gis",
   "description": "Helpers for GIS category data",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "license": "MIT",
   "type": "module",
   "publishConfig": {
@@ -32,8 +32,8 @@
     "README.md"
   ],
   "dependencies": {
-    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
-    "@loaders.gl/schema": "^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "4.4.0-alpha.0",
+    "@loaders.gl/schema": "4.4.0-alpha.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@math.gl/polygon": "^4.1.0",
     "pbf": "^3.2.1"
@@ -42,7 +42,7 @@
     "@math.gl/proj4": "^4.1.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
