--- a/modules/images/package.json
+++ b/modules/images/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/images",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "description": "Framework-independent loaders and writers for images (PNG, JPG, ...)",
   "license": "MIT",
   "type": "module",
@@ -41,13 +41,13 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "^5.0.0-alpha.0"
+    "@loaders.gl/loader-utils": "4.4.0-alpha.0"
   },
   "devDependencies": {
     "@types/get-pixels": "^3.3.2"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
