--- a/modules/mvt/package.json
+++ b/modules/mvt/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@loaders.gl/mvt",
   "description": "Loader for Mapbox Vector Tiles",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "license": "MIT",
   "type": "module",
   "publishConfig": {
@@ -44,10 +44,10 @@
     "build-worker": "esbuild src/workers/mvt-worker.ts --bundle --outfile=dist/mvt-worker.js --define:__VERSION__=\\\"$npm_package_version\\\""
   },
   "dependencies": {
-    "@loaders.gl/gis": "^5.0.0-alpha.0",
-    "@loaders.gl/images": "^5.0.0-alpha.0",
-    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
-    "@loaders.gl/schema": "^5.0.0-alpha.0",
+    "@loaders.gl/gis": "4.4.0-alpha.0",
+    "@loaders.gl/images": "4.4.0-alpha.0",
+    "@loaders.gl/loader-utils": "4.4.0-alpha.0",
+    "@loaders.gl/schema": "4.4.0-alpha.0",
     "@math.gl/polygon": "^4.1.0",
     "@probe.gl/stats": "^4.0.0",
     "pbf": "^3.2.1"
@@ -56,7 +56,7 @@
     "@types/pbf": "^3.0.2"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
