--- a/modules/netcdf/package.json
+++ b/modules/netcdf/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@loaders.gl/netcdf",
   "description": "Loader for NetCDF",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "license": "MIT",
   "type": "module",
   "publishConfig": {
@@ -39,10 +39,10 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "^5.0.0-alpha.0"
+    "@loaders.gl/loader-utils": "4.4.0-alpha.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
