--- a/modules/pmtiles/package.json
+++ b/modules/pmtiles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/pmtiles",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "description": "Framework-independent loader for the pmtiles format",
   "license": "MIT",
   "type": "module",
@@ -46,14 +46,14 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/images": "^5.0.0-alpha.0",
-    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
-    "@loaders.gl/mvt": "^5.0.0-alpha.0",
-    "@loaders.gl/schema": "^5.0.0-alpha.0",
+    "@loaders.gl/images": "4.4.0-alpha.0",
+    "@loaders.gl/loader-utils": "4.4.0-alpha.0",
+    "@loaders.gl/mvt": "4.4.0-alpha.0",
+    "@loaders.gl/schema": "4.4.0-alpha.0",
     "pmtiles": "^3.0.4"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
