--- a/modules/potree/package.json
+++ b/modules/potree/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/potree",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "description": "potree loaders for large point clouds.",
   "license": "MIT",
   "type": "module",
@@ -44,13 +44,13 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/las": "^5.0.0-alpha.0",
-    "@loaders.gl/math": "^5.0.0-alpha.0",
-    "@loaders.gl/schema": "^5.0.0-alpha.0",
+    "@loaders.gl/las": "4.4.0-alpha.0",
+    "@loaders.gl/math": "4.4.0-alpha.0",
+    "@loaders.gl/schema": "4.4.0-alpha.0",
     "@math.gl/core": "^4.1.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
