--- a/modules/schema-utils/package.json
+++ b/modules/schema-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/schema-utils",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "description": "Schema-related utilities for loaders.gl...",
   "license": "MIT",
   "type": "module",
@@ -41,12 +41,12 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/schema": "^4.0.0",
+    "@loaders.gl/schema": "4.4.0-alpha.0",
     "@types/geojson": "^7946.0.7",
     "apache-arrow": ">= 15.0.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
