--- a/modules/schema/package.json
+++ b/modules/schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/schema",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "description": "Table format APIs for JSON, CSV, etc...",
   "license": "MIT",
   "type": "module",
@@ -45,7 +45,7 @@
     "apache-arrow": ">= 15.0.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
