--- a/modules/tiles/package.json
+++ b/modules/tiles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/tiles",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "description": "Common components for different tiles loaders.",
   "license": "MIT",
   "type": "module",
@@ -42,8 +42,8 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
-    "@loaders.gl/math": "^5.0.0-alpha.0",
+    "@loaders.gl/loader-utils": "4.4.0-alpha.0",
+    "@loaders.gl/math": "4.4.0-alpha.0",
     "@math.gl/core": "^4.1.0",
     "@math.gl/culling": "^4.1.0",
     "@math.gl/geospatial": "^4.1.0",
@@ -54,7 +54,7 @@
     "@deck.gl/core": "^8.9.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
