--- a/modules/wkt/package.json
+++ b/modules/wkt/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@loaders.gl/wkt",
   "description": "Loader and Writer for the WKT (Well Known Text) Format",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "license": "MIT",
   "type": "module",
   "publishConfig": {
@@ -44,12 +44,12 @@
     "fuzzer": "^0.2.1"
   },
   "dependencies": {
-    "@loaders.gl/gis": "^5.0.0-alpha.0",
-    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
-    "@loaders.gl/schema": "^5.0.0-alpha.0"
+    "@loaders.gl/gis": "4.4.0-alpha.0",
+    "@loaders.gl/loader-utils": "4.4.0-alpha.0",
+    "@loaders.gl/schema": "4.4.0-alpha.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
