--- a/modules/zarr/package.json
+++ b/modules/zarr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/zarr",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "description": "Framework-independent loaders for Zarr",
   "license": "MIT",
   "type": "module",
@@ -42,7 +42,7 @@
     "zarr": "^0.5.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
