--- a/modules/zip/package.json
+++ b/modules/zip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@loaders.gl/zip",
-  "version": "5.0.0-alpha.0",
+  "version": "4.4.0-alpha.0",
   "description": "Zip Archive Loader",
   "license": "MIT",
   "type": "module",
@@ -39,14 +39,14 @@
     "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
   },
   "dependencies": {
-    "@loaders.gl/compression": "^5.0.0-alpha.0",
-    "@loaders.gl/crypto": "^5.0.0-alpha.0",
-    "@loaders.gl/loader-utils": "^5.0.0-alpha.0",
+    "@loaders.gl/compression": "4.4.0-alpha.0",
+    "@loaders.gl/crypto": "4.4.0-alpha.0",
+    "@loaders.gl/loader-utils": "4.4.0-alpha.0",
     "jszip": "^3.1.5",
     "md5": "^2.3.0"
   },
   "peerDependencies": {
-    "@loaders.gl/core": "^4.0.0"
+    "@loaders.gl/core": "4.4.0-alpha.0"
   },
   "gitHead": "3213679d79e6ff2814d48fd3337acfa446c74099"
 }
