--- a/modules/gis/package.json
+++ b/modules/gis/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@loaders.gl/loader-utils": "4.4.0-alpha.0",
     "@loaders.gl/schema": "4.4.0-alpha.0",
+    "@loaders.gl/schema-utils": "4.4.0-alpha.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@math.gl/polygon": "^4.1.0",
     "pbf": "^3.2.1"
