--- a/package.json
+++ b/package.json
@@ -68,7 +68,17 @@
     "@docusaurus/module-type-aliases": "~3.3.2",
     "@docusaurus/plugin-client-redirects": "~3.3.2",
     "@docusaurus/plugin-content-docs": "~3.3.2",
-    "@docusaurus/tsconfig": "~3.3.2"
+    "@docusaurus/tsconfig": "~3.3.2",
+    "@loaders.gl/core": "^4.4.0-alpha.0",
+    "@loaders.gl/geopackage": "^4.4.0-alpha.0",
+    "@loaders.gl/i3s": "^4.4.0-alpha.0",
+    "@loaders.gl/las": "^4.4.0-alpha.0",
+    "@loaders.gl/loader-utils": "^4.4.0-alpha.0",
+    "@loaders.gl/obj": "^4.4.0-alpha.0",
+    "@loaders.gl/ply": "^4.4.0-alpha.0",
+    "@loaders.gl/schema": "^4.4.0-alpha.0",
+    "@loaders.gl/schema-utils": "^4.4.0-alpha.0",
+    "@loaders.gl/textures": "^4.4.0-alpha.0"
   },
   "volta": {
     "node": "20.18.0",
