--- a/modules/las/package.json
+++ b/modules/las/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@loaders.gl/loader-utils": "4.4.0-alpha.0",
     "@loaders.gl/schema": "4.4.0-alpha.0",
+    "@loaders.gl/schema-utils": "4.4.0-alpha.0",
     "laz-perf": "^0.0.6"
   },
   "peerDependencies": {
