--- a/website/package.json
+++ b/website/package.json
@@ -81,6 +81,7 @@
     "@mdx-js/react": "^3.0.1",
     "@mdx-js/mdx": "^3.0.1",
     "@loaders.gl/core": "^4.4.0-alpha.0",
+    "@loaders.gl/draco": "^4.4.0-alpha.0",
     "@loaders.gl/geopackage": "^4.4.0-alpha.0",
     "@loaders.gl/i3s": "^4.4.0-alpha.0",
     "@loaders.gl/las": "^4.4.0-alpha.0",
