feat(geoarrow): New module for geoarrow processing

--- a/modules/gis/tsconfig.json
+++ b/modules/gis/tsconfig.json
@@ -9,6 +9,8 @@
   },
   "references": [
     {"path": "../loader-utils"},
+    {"path": "../geoarrow"},
+    {"path": "../math"},
     {"path": "../schema"},
     {"path": "../schema-utils"}
   ]
