--- a/modules/geoarrow/package.json
+++ b/modules/geoarrow/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@loaders.gl/gis",
-  "description": "Helpers for GIS category data",
+  "name": "@loaders.gl/geoarrow",
   "version": "4.4.0-alpha.0",
+  "description": "GeoArrow columnar geometry encoding and decoding",
   "license": "MIT",
   "type": "module",
   "publishConfig": {
@@ -12,8 +12,17 @@
     "url": "https://github.com/visgl/loaders.gl"
   },
   "keywords": [
-    "geometry",
-    "GeoJSON"
+    "loader",
+    "parser",
+    "writer",
+    "encoder",
+    "geoarrow",
+    "apache-arrow",
+    "arrow",
+    "binary columnar",
+    "cloud native",
+    "webgl",
+    "webgpu"
   ],
   "types": "dist/index.d.ts",
   "main": "dist/index.cjs",
@@ -23,6 +32,10 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./exports/*": {
+      "types": "./dist/exports/*.d.ts",
+      "import": "./dist/exports/*.js"
     }
   },
   "sideEffects": false,
@@ -31,17 +44,17 @@
     "dist",
     "README.md"
   ],
-  "dependencies": {
-    "@loaders.gl/geoarrow": "4.4.0-alpha.0",
-    "@loaders.gl/loader-utils": "4.4.0-alpha.0",
-    "@loaders.gl/schema": "4.4.0-alpha.0",
-    "@loaders.gl/schema-utils": "4.4.0-alpha.0",
-    "@mapbox/vector-tile": "^1.3.1",
-    "@math.gl/polygon": "^4.1.0",
-    "pbf": "^3.2.1"
+  "browser": {
+    "fs": false
   },
-  "devDependencies": {
-    "@math.gl/proj4": "^4.1.0"
+  "scripts": {
+    "pre-build": "",
+    "build-bundle": "ocular-bundle ./bundle.ts --output=dist/dist.min.js",
+    "build-bundle-dev": "ocular-bundle ./bundle.ts --env=dev --output=dist/dist.dev.js"
+  },
+  "dependencies": {
+    "@math.gl/polygon": "^4.1.0",
+    "apache-arrow": ">= 16.1.0"
   },
   "peerDependencies": {
     "@loaders.gl/core": "4.4.0-alpha.0"
