--- a/modules/parquet/package.json
+++ b/modules/parquet/package.json
@@ -63,6 +63,7 @@
     "@loaders.gl/arrow": "4.4.0-alpha.0",
     "@loaders.gl/bson": "4.4.0-alpha.0",
     "@loaders.gl/compression": "4.4.0-alpha.0",
+    "@loaders.gl/geoarrow": "4.4.0-alpha.0",
     "@loaders.gl/gis": "4.4.0-alpha.0",
     "@loaders.gl/loader-utils": "4.4.0-alpha.0",
     "@loaders.gl/schema": "4.4.0-alpha.0",
