--- a/modules/parquet/tsconfig.json
+++ b/modules/parquet/tsconfig.json
@@ -10,6 +10,7 @@
   "references": [
     {"path": "../arrow"},
     {"path": "../compression"},
+    {"path": "../geoarrow"},
     {"path": "../loader-utils"},
     {"path": "../schema"},
     {"path": "../gis"},
