feat(geoarrow): New module for geoarrow processing (#3149)

--- a/modules/gis/package.json
+++ b/modules/gis/package.json
@@ -32,6 +32,7 @@
     "README.md"
   ],
   "dependencies": {
+    "@loaders.gl/geoarrow": "4.4.0-alpha.0",
     "@loaders.gl/loader-utils": "4.4.0-alpha.0",
     "@loaders.gl/schema": "4.4.0-alpha.0",
     "@loaders.gl/schema-utils": "4.4.0-alpha.0",
