--- a/examples-experimental/gltf-with-deck.gl/package.json
+++ b/examples-experimental/gltf-with-deck.gl/package.json
@@ -17,8 +17,8 @@
     "@luma.gl/constants": "^8.5.21",
     "@luma.gl/gltf": "^8.5.21",
     "maplibre-gl": "^2.4.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-map-gl": "^7.0.0"
   },
   "devDependencies": {
