--- a/examples-experimental/point-tile-source/package.json
+++ b/examples-experimental/point-tile-source/package.json
@@ -20,8 +20,8 @@
     "@loaders.gl/potree": "4.4.0-alpha.1",
     "@loaders.gl/loader-utils": "4.4.0-alpha.1",
     "maplibre-gl": "^4.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
