--- a/examples-experimental/slpk-via-range-requests/package.json
+++ b/examples-experimental/slpk-via-range-requests/package.json
@@ -20,14 +20,14 @@
     "mapbox-gl": "npm:empty-npm-package@^1.0.0",
     "maplibre-gl": "^3.6.2",
     "prop-types": "^15.7.2",
-    "react": "^18.2.0",
+    "react": "19.2.3",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "19.2.3",
     "react-map-gl": "^7.1.7",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.75",
+    "@types/react": "^19.0.0",
     "@types/styled-components": "^5.1.34",
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
