--- a/examples/get-started/bundle-with-nextjs/package.json
+++ b/examples/get-started/bundle-with-nextjs/package.json
@@ -13,16 +13,16 @@
     "@loaders.gl/worker-utils": "4.4.0-alpha.1",
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "deck.gl": "^8.8.23"
   }, 
   "devDependencies": {
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "14.2.15",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "sass": "^1.58.0",
     "typescript": "^5.3.0"
   }
