--- a/examples/website/i3s-building-scene-layer/package.json
+++ b/examples/website/i3s-building-scene-layer/package.json
@@ -22,9 +22,9 @@
     "mapbox-gl": "npm:empty-npm-package@^1.0.0",
     "maplibre-gl": "^3.6.2",
     "prop-types": "^15.7.2",
-    "react": "^18.2.0",
+    "react": "19.2.3",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "19.2.3",
     "react-map-gl": "^7.1.7",
     "styled-components": "^4.2.0"
   },
