--- a/examples/website/textures/package.json
+++ b/examples/website/textures/package.json
@@ -16,8 +16,8 @@
     "@luma.gl/core": "^9.0.7",
     "@luma.gl/engine": "^9.0.7",
     "@luma.gl/webgl": "^9.0.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
