--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,25 +5,35 @@ on:
   push:
     branches:
     - master
-    - dev
-    - release
   pull_request:
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
+    timeout-minutes: 15
+    strategy:
+      matrix:
+        node-version: [22]
 
     steps:
-      - uses: actions/checkout@v4.1.1
-      - uses: volta-cli/action@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Setup Node (with Corepack)
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn' # or 'pnpm', 'npm' depending on your package manager
 
       - name: Install dependencies
-        run: |
-          yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Build
         run: |
-          yarn run bootstrap
+          yarn run build
 
       - name: Run browser tests (generate coverage)
         run: |
