Build workers before node tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Build workers
+        run: yarn run build-workers
+
       - name: Build
         if: matrix.full
         run: |
