chore: Upgrade to @vis.gl/dev-tools@1.0 (#3252)

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@probe.gl/bench": "^4.0.2",
     "@probe.gl/test-utils": "^4.0.2",
     "@types/tape-promise": "^4.0.1",
-    "ocular-dev-tools": "2.0.0-alpha.35",
+    "@vis.gl/dev-tools": "^1.0.0",
+    "@vis.gl/ts-plugins": "^1.0.0",
     "pre-commit": "^1.2.2",
     "pre-push": "^0.1.1",
     "puppeteer": "^23.4.0",
