Simplify app build runner for tile-converter

--- a/package.json
+++ b/package.json
@@ -36,13 +36,17 @@
     "start": "echo 'Please see loaders.gl website for how to run examples' && open https://loaders.gl/docs",
     "clean": "ocular-clean",
     "tsclean": "find . -name tsconfig.tsbuildinfo -exec rm {} \\;",
-    "build": "ocular-clean && ocular-build && npx lerna run pre-build",
+    "build": "yarn build-modules",
+    "build-modules": "ocular-clean && ocular-build && npx lerna run pre-build",
+    "build-apps": "node ./scripts/run-app-commands.mjs build",
     "build-workers": "npx lerna run pre-build",
     "cover": "ocular-test cover",
     "lint": "ocular-lint",
     "publish-beta": "ocular-publish beta",
     "publish-prod": "ocular-publish prod",
-    "test": "ocular-test",
+    "test": "yarn test-modules",
+    "test-modules": "ocular-test",
+    "test-apps": "node ./scripts/run-app-commands.mjs test",
     "test-node": "ocular-test node",
     "test-cover": "ocular-test cover",
     "test-website": "cd website && yarn && yarn build && cd ..",
