--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "build-workers": "npx lerna run pre-build",
     "cover": "ocular-test cover",
     "lint": "ocular-lint",
-    "publish-beta": "ocular-publish beta",
-    "publish-prod": "ocular-publish prod",
+    "publish-beta": "ocular-publish version-only-beta",
+    "publish-prod": "ocular-publish version-only-prod",
     "test": "yarn test-modules",
     "test-modules": "ocular-test",
     "test-apps": "node ./scripts/run-app-commands.mjs test",
