--- a/website/package.json
+++ b/website/package.json
@@ -18,14 +18,15 @@
   "dependencies": {
     "@algolia/autocomplete-js": "^1.17.0",
     "@arcgis/core": "^4.25.0",
-    "@deck.gl-community/experimental": "^9.0.3",
-    "@deck.gl/arcgis": "^9.0.33",
-    "@deck.gl/core": "^9.0.33",
-    "@deck.gl/extensions": "^9.0.33",
-    "@deck.gl/geo-layers": "^9.0.33",
-    "@deck.gl/layers": "^9.0.33",
-    "@deck.gl/mesh-layers": "^9.0.33",
-    "@deck.gl/react": "^9.0.33",
+    "@deck.gl-community/experimental": "^9.2.0",
+    "@deck.gl/arcgis": "^9.2.0",
+    "@deck.gl/core": "^9.2.0",
+    "@deck.gl/extensions": "^9.2.0",
+    "@deck.gl/geo-layers": "^9.2.0",
+    "@deck.gl/layers": "^9.2.0",
+    "@deck.gl/mesh-layers": "^9.2.0",
+    "@deck.gl/react": "^9.2.0",
+    "@deck.gl/widgets": "^9.2.0",
     "@docusaurus/core": "^3.9.2",
     "@docusaurus/preset-classic": "^3.9.2",
     "@esri/react-arcgis": "^5.2.0",
